name:                server
version:             0.1.0.0
synopsis:            Snap + ReactJS + webpack example
description:         Please see README.md
homepage:            https://github.com/nurpax/snap-reactjs-todo#readme
license:             BSD3
license-file:        LICENSE
author:              Janne Hellsten
maintainer:          jjhellst@gmail.com
copyright:           2016 Janne Hellsten
category:            Web
build-type:          Simple
cabal-version:       >=1.10

flag development
  description: Whether to build the server in development (interpreted) mode
  default: False

executable server
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Application Db Site Util
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    aeson,
    attoparsec,
    base                  >= 4      && < 5,
    bcrypt                >= 0.0.10,
    bytestring            >= 0.9.1  && < 0.11,
    clientsession,
    containers,
    directory,
    jwt,
    lens,
    mtl                   >= 2 && < 3,
    snap                  >= 1.0,
    snap-core             >= 1.0,
    snap-server           >= 1.0,
    snap-loader-static,
    snaplet-sqlite-simple >= 1.0,
    snaplet-sqlite-simple-jwt-auth >= 0.2.0.0,
    sqlite-simple         >= 0.4.10.0,
    text                  >= 1.2,
    time                  >= 1.5,
    either                >= 3.1,
    errors                >= 2.1.2,
    unordered-containers
  default-language:    Haskell2010

executable server-api-test
  default-language: Haskell2010
  hs-source-dirs: test
  main-is:        Main.hs
  other-modules:  Test TestTodo
  ghc-options:   -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind
  build-depends: base
               , aeson
               , bytestring
               , containers
               , http-client
               , HUnit
               , jwt
               , lens
               , lens-aeson
               , test-framework
               , test-framework-hunit
               , text
               , time
               , vector
               , wreq >= 0.1.0.1

source-repository head
  type:     git
  location: https://github.com/nurpax/snap-reactjs-todo
