name:                snap-reactjs-todo
version:             0.1.0.0
synopsis:            Snap + ReactJS + webpack example
description:         Please see README.md
homepage:            https://github.com/nurpax/snap-reactjs-todo#readme
license:             BSD3
license-file:        LICENSE
author:              Janne Hellsten
maintainer:          jjhellst@gmail.com
copyright:           2016 Janne Hellsten
category:            Web
build-type:          Simple
cabal-version:       >=1.10

flag development
  description: Whether to build the server in development (interpreted) mode
  default: False

executable snap-reactjs-todo
  hs-source-dirs:      src src/Snap/Snaplet
  main-is:             Main.hs
  other-modules:       Application Db Site Util
                       Snap.Snaplet.SqliteSimple.JwtAuth
                       Snap.Snaplet.SqliteSimple.JwtAuth.JwtAuth
                       Snap.Snaplet.SqliteSimple.JwtAuth.Db
                       Snap.Snaplet.SqliteSimple.JwtAuth.Util
                       Snap.Snaplet.SqliteSimple.JwtAuth.Types
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    aeson,
    attoparsec,
    base                  >= 4      && < 5,
    bcrypt                >= 0.0.10,
    bytestring            >= 0.9.1  && < 0.11,
    configurator,
    containers,
    jwt,
    lens,
    mtl                   >= 2 && < 3,
    snap                  >= 1.0,
    snap-core             >= 1.0,
    snap-server           >= 1.0,
    snap-loader-static,
    snaplet-sqlite-simple >= 1.0,
    sqlite-simple         >= 0.1 && < 1.0,
    text                  >= 1.2,
    time                  >= 1.5,
    either                >= 3.1,
    errors                >= 2.1.2,
    unordered-containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nurpax/snap-reactjs-todo
